# codenforce

./: .bk_name.sql.swp  .gitignore  .gitmodules  CNFDIFFSCHMV1.sh  CNFDIFFSCHMV2.sh  CNFDIFFSCHMV310.sh  CNFDIFFSCHMV312.sh  CNFDIFFSCHMV315.sh  CNFDIFFSCHMV325.sh  CNFDIFFSCHMV406.sh  CNFDIFFSCHMV413.sh  CNFDIFFSCHMVT.sh  CNFDUMPtest2.sh  CNFDUMPtest3.sh  Dockerfile  Dockerfile-1207  LICENSE_gplv3_print.odt  Pipfile  README.md  README_244FINAL.md  composetest2  docker-compose-postgresonly1821.yml  docker-compose.yml  index.html  init.sql  local_schemaonly25-feb-22.sql  nb-configuration.xml  pgdump_test.sh  pom.xml  remote_schemaonly25-feb-22.sql  run.sh  setup.py  test
053022/: Install Script trigger_ function CDNFORCE_queryV4-0523  test script 053022 -trigger test.sql
Docker/: db.Dockerfile
codenforce_map/: package-lock.json  package.json
composetest/: Dockerfile  docker-compose.yml
db/: Dockerfile  README.md  cleardb.sh  loaddb.sh
docs/: ccstaffadmin.md  cecasephases.md  changelog.md  codingNorms.md  dates.md  docdoc.md  gf-wildfly-migration.md  index.html  index.md  muni-user-project.md  novs.md  occupancy-buildout.md  opencase.md  permissions.md  pg-add-table-columns.md  property-unit-mini-project.md  references.md  searching.md  ss_Blob.md  ss_Ceactionrequest.md  ss_Cecase.md  ss_Choice.md  ss_Codebook.md  ss_Event.md  ss_Municipality.md  ss_Occapp.md  ss_Occperiod.md  ss_Payment.md  ss_Person.md  ss_Property.md  ss_Publicinfobundle.md  (+12 more)
python/address_helper/: README.md  __init__.py  _db.py  _misc.py  db_integretity_check.py  pyproject.toml  tests.py
(+1642 files in other folders)
